// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`InputBox renders default placeholder and helper text 1`] = `
" ────────────────────────────────────────────────────────── 
  ❯ Type a message...                                 SEND  
 ────────────────────────────────────────────────────────── 
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`InputBox renders pending mode action state 1`] = `
" ────────────────────────────────────────────────────────────────────────────── 
  ❯ Awaiting permission decision...                                       SEND  
 ────────────────────────────────────────────────────────────────────────────── 
  ↑/↓ select Allow/Deny in message list • Enter to confirm                      
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`InputBox command mode display renders mode placeholder and helper text for claude mode 1`] = `
" ────────────────────────────────────────────────────────────────────────────── 
  ❯ Message Claude Code...                                                SEND  
 ────────────────────────────────────────────────────────────────────────────── 
  Type /exit to leave Claude Code mode                                          
                                                                                
                                                                                
                                                                                
                                                                                
"
`;
